# redesigned-octo-couscous

./: .envrc  .gitignore  .oprc  AGENTS.md  DEPLOYMENT_PLAN.md  Makefile  NEXT-SESSION.md  PLAN-supabase-render.md  README.md
.github/workflows/: bump-version.yml
.opencode/skills/deploy/: SKILL.md
auth0_actions/: p42-check-address.js  p42-check-email-intent.js  p42-orders.js
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  pyproject.toml
backend/app/: __init__.py  __main__.py  auth.py  auth0_mgmt.py  cache.py  config.py  db.py  models.py
backend/app/routes/: menu.py  orders.py  public_endpoints.py
backend/tests/: conftest.py  test_db_config.py  test_menu.py  test_orders.py
frontend/: .dockerignore  .env.production  Dockerfile  PLAN.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/quickstart/: quickstart-login.yaml
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/api/: client.js  menu.js  orders.js
frontend/src/components/: AuthErrorAlert.jsx  CartItem.jsx  Footer.jsx  Layout.jsx  OrderCard.jsx  PizzaCard.jsx  ProtectedRoute.jsx  VerifiedBadge.jsx
frontend/src/context/: CartContext.jsx
frontend/src/data/: menu.js
frontend/src/mocks/: orders.js
frontend/src/routes/: Cart.jsx  Checkout.jsx  Home.jsx  Profile.jsx
frontend/tools/: auth0-config.cjs
frontend/tools/__tests__/: auth0-config.test.cjs
