[project]
name = "pizza42-backend"
version = "0.1.0"
description = "Pizza42 orders + menu API (Auth0 RS256, SQLite)"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0",
  "flask-jwt-extended>=4.6",
  "pyjwt>=2.8",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]