[project]
name = "pizza42-backend"
version = "0.1.17"
description = "Pizza42 orders + menu API (Auth0 RS256, PostgreSQL)"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0",
  "flask-cors>=6.0.5",
  "flask-sqlalchemy>=3.0",
  "flask-jwt-extended>=4.6",
  "pyjwt>=2.8",
  "python-dotenv>=1.0",
  "cryptography>=49.0.0",
  "gunicorn>=23.0",
  "psycopg[binary]>=3.2"
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = "."
